--- a/Glass-flowers/index.html
+++ b/Glass-flowers/index.html
@@ -53,7 +53,7 @@
         
         <section class="sticky-sections__section" style="background-image: url(./images/flower2.png);">
             <div class="message-contianer">
-                <div class="message-item">
+                <div class="message-item ">
                     <div>
                         <h1>A frail beauty that the seasons bring.</h1>
                         <h3>But though it dies, it leaves behind
@@ -61,7 +61,7 @@
                     </div>
 
                 </div>
-                <div class="message-item">
+                <div class="message-item button-item">
                     <button>you need it</button>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                             But our legacy will live on, to pave the way.</h3>
                     </div>
                 </div>
-                <div class="message-item">
+                <div class="message-item button-item">
                     <button>your last chance</button>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                             We make the most of our fleeting hours.</h3>
                     </div>
                 </div>
-                <div class="message-item">
+                <div class="message-item button-item">
                     <button>just end it</button>
                 </div>
             </div>
